# skill

./: Cargo.toml  Makefile  README.md  config.example.yaml
.beads/: issues.jsonl
.github/workflows/: release.yml
packaging/homebrew/: skill.rb
packaging/linux/: install.sh
packaging/windows/scoop/: skill.json
packaging/windows/winget/: skill.yaml
src/: assistant.rs  cli.rs  commands.rs  config.rs  lib.rs  main.rs  paths.rs  scan.rs  usage.rs  validation.rs
tests/: skill_tests.rs
