[package]
name = "skill"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
regex = "1.10"
walkdir = "2.5"
which = "6.0"
once_cell = "1.19"
tempfile = "3.10"
serde_json = "1.0"
bytesize = "1.3"
flate2 = "1.0"
tar = "0.4"
ureq = "2.10"
zip = "2.2"

[package.metadata.dist]
cargo-dist-version = "0.18.0"
targets = [
  "aarch64-apple-darwin",
  "x86_64-apple-darwin",
  "x86_64-unknown-linux-gnu",
  "x86_64-pc-windows-msvc",
]
installers = ["shell", "powershell"]
